SF Primes/src/objects/Requests_Snapshot_History__c.object
<CustomObject>
    <description>Requests Snapshot History for Dashboard</description>
    <fields>
        <fullName>Insert_DateTime__c</fullName>
        <label>Insert Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Request_CreateDate__c</fullName>
        <label>Request CreateDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Requests__c</fullName>
        <label># of Requests</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Requests Snapshot History</label>
    <nameField>
        <displayFormat>RSH-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Requests Snapshot History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>